# docker-stacks

./: .gitignore  .hadolint.yaml  .lintr  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  Rprofile.site  build-and-push.py  build.sh  dev-build.sh  dev-test.sh  docker-bake.hcl  justfile  packages.yaml  pixi.toml  push.sh  pyproject.toml  requirements.r  rpixi.toml  test.sh
assets/: Rprofile.site
base-r-notebook/: Dockerfile  Rprofile.site
datascience-notebook/: Dockerfile  environment.yaml  requirements.r  requirements.txt
dockerfiles/: NOTES.md  base.Dockerfile  main.Dockerfile
essentials-builder/: Dockerfile  requirements.r
essentials-notebook/: Dockerfile  environment.yaml  requirements.r  requirements.txt
minimal-r-notebook/: Dockerfile  Rprofile.site
package-builder/: Dockerfile  build.sh
pak-scripts/: base-r-notebook.R  datascience-notebook.R  default.R  essentials-notebook.R  r-notebook.R
python-notebook/: Dockerfile
r-notebook/: Dockerfile  Rprofile.builder.site  environment.yaml  requirements.r  requirements.txt
scripts/: build-image.sh  build.sh  check-packages.py  install-packages.py  install-packages.r  list-python-packages.sh  rpixi.R  run-container.sh  run-shell.sh  run.sh  setup-av.sh  setup-env.sh  setup-geospatial.sh  setup-jupyter.sh  setup-r.sh  test-image.sh  test-packages.sh  test.sh  update-deepnote-constraints.sh  update-pak-scripts.sh  validate-env.sh  validate-manifests.sh
tests/: base-r-notebook.sh  datascience-notebook.sh  essentials-notebook.sh  packages.txt  test.sh  (+4 more)
(+31 files in other folders)
