[tool.poetry]
name = "docker-stacks"
version = "0.1.0"
description = "Build and push CourseKata Docker images."
authors = ["Adam Blake <adam@ablake.dev>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
packages = [{include = "docker_stacks"}]

[tool.poetry.dependencies]
python = "^3.11"
anyio = "^3.7.1"
asyncclick = "^8.1.3.4"
pydantic = "^2.1.1"

[tool.poetry.group.dev.dependencies]
asyncclick = "^8.1.3.4"
pydantic = "^2.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
